examples/Errors/101.zsrc
{
    "0::a # PT:abc": {
        "name": "a",
        "base": "#",
        "function": "PT",
        "paramsList": [
            "abc"
        ]
    },
    "1::a ? pushh:": {
        "name": "a",
        "base": "?",
        "function": "pushh",
        "paramsList": [
            ""
        ]
    }
}